--- a/PuLP/ModeleExact.ipynb
+++ b/PuLP/ModeleExact.ipynb
@@ -358,22 +358,22 @@
       "MIP Presolve modified 1428 coefficients.\n",
       "Reduced MIP has 7888 rows, 7092 columns, and 65082 nonzeros.\n",
       "Reduced MIP has 7092 binaries, 0 generals, 0 SOSs, and 0 indicators.\n",
-      "Presolve time = 0.05 sec. (38.95 ticks)\n",
-      "Found incumbent of value 48.000000 after 0.12 sec. (92.35 ticks)\n",
+      "Presolve time = 0.06 sec. (38.95 ticks)\n",
+      "Found incumbent of value 48.000000 after 0.17 sec. (92.35 ticks)\n",
       "Probing changed sense of 288 constraints.\n",
-      "Probing time = 0.10 sec. (47.47 ticks)\n",
+      "Probing time = 0.16 sec. (47.47 ticks)\n",
       "Tried aggregator 1 time.\n",
       "Detecting symmetries...\n",
       "MIP Presolve eliminated 300 rows and 288 columns.\n",
       "Reduced MIP has 7588 rows, 6804 columns, and 64218 nonzeros.\n",
       "Reduced MIP has 6804 binaries, 0 generals, 0 SOSs, and 0 indicators.\n",
-      "Presolve time = 0.21 sec. (110.56 ticks)\n",
+      "Presolve time = 0.18 sec. (110.56 ticks)\n",
       "Probing time = 0.02 sec. (8.07 ticks)\n",
       "Clique table members: 27395.\n",
       "MIP emphasis: balance optimality and feasibility.\n",
       "MIP search method: dynamic search.\n",
       "Parallel mode: deterministic, using up to 8 threads.\n",
-      "Root relaxation solution time = 0.57 sec. (356.36 ticks)\n",
+      "Root relaxation solution time = 0.90 sec. (356.36 ticks)\n",
       "\n",
       "        Nodes                                         Cuts/\n",
       "   Node  Left     Objective  IInf  Best Integer    Best Bound    ItCnt     Gap\n",
@@ -391,22 +391,22 @@
       "      0     0        0.0000  1650       20.0000      Cuts: 83     8894  100.00%\n",
       "*     0+    0                            0.0000        0.0000             0.00%\n",
       "      0     0        cutoff              0.0000        0.0000    18057    0.00%\n",
-      "Elapsed time = 130.92 sec. (54995.46 ticks, tree = 0.01 MB, solutions = 10)\n",
+      "Elapsed time = 131.42 sec. (54995.46 ticks, tree = 0.01 MB, solutions = 10)\n",
       "\n",
       "Clique cuts applied:  83\n",
       "Zero-half cuts applied:  51\n",
       "Lift and project cuts applied:  1\n",
       "\n",
       "Root node processing (before b&c):\n",
-      "  Real time             =  130.92 sec. (54996.34 ticks)\n",
+      "  Real time             =  131.43 sec. (54996.34 ticks)\n",
       "Parallel b&c, 8 threads:\n",
       "  Real time             =    0.00 sec. (0.00 ticks)\n",
       "  Sync time (average)   =    0.00 sec.\n",
       "  Wait time (average)   =    0.00 sec.\n",
       "                          ------------\n",
-      "Total (root+branch&cut) =  130.92 sec. (54996.34 ticks)\n",
+      "Total (root+branch&cut) =  131.43 sec. (54996.34 ticks)\n",
       "Cplex status= 101\n",
-      "Temps de résolution : 131.4018635749817\n"
+      "Temps de résolution : 131.92963027954102\n"
      ]
     }
    ],
@@ -562,7 +562,7 @@
     "for i in range(0,cardO):\n",
     "    for s in range(0,cardS):\n",
     "        for p in range(0,cardP):\n",
-    "            if u[i,s].varValue < (rho[p]*y[i,rFunction(s,p)].varValue - z[i,s,p].varValue):\n",
+    "            if u[i,s].varValue < (kappa[i][p]*rho[p]*y[i,rFunction(s,p)].varValue - z[i,s,p].varValue):\n",
     "                test11 = False\n",
     "                \n",
     "if test1:\n",
@@ -622,6 +622,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "uis\n",
       "Affectation aux roulements\n",
       "y[ 0 , 14 ] == 1\n",
       "y[ 1 , 2 ] == 1\n",
@@ -1277,6 +1278,12 @@
     }
    ],
    "source": [
+    "print(\"uis\")\n",
+    "for s in range(0,cardS):\n",
+    "    for i in range(0,cardO):\n",
+    "        if(u[i,s].varValue == 1):\n",
+    "            print(\"u[\",i,\",\",s,\"] = 1\")\n",
+    "\n",
     "print('Affectation aux roulements')\n",
     "for i in range(0,24):\n",
     "    for r in range(0,24):\n",
