--- a/PuLP/ModeleDeuxPhases.ipynb
+++ b/PuLP/ModeleDeuxPhases.ipynb
@@ -251,9 +251,6 @@
    },
    "outputs": [],
    "source": [
-    "#contrainte 1 Un opérateur ne peut prendre un poste que s'il est compétent et disponible sur un jour ouvré\n",
-    "\n",
-    "\n",
     "#contrainte 2 Un opérateur ne peut être affecté à un poste une semaine que s'il en possède la compétence\n",
     "\n",
     "for i in range(0,cardO):\n",
@@ -261,44 +258,36 @@
     "        for p in range(0,cardP):\n",
     "            prob += (z[i,s,p] <= kappa[i][p], f\"C2_{i,s,p}\")\n",
     "\n",
-    "#contrainte 3 Chaque jour, l'opérateur est affecté à son poste de la semaine (s'il n'est pas rouleur)\n",
-    "\n",
-    "#contrainte 4 (page 8) Chaque jour, un opérateur est affecté à au plus un poste #MODIF\n",
-    "\n",
-    "\n",
-    "#contrainte 5 (page 8) Chaque jour, chaque poste est assuré par un opérateur #MODIF\n",
-    "\n",
-    "\n",
-    "#contrainte 6 (page 9) Chaque semaine, chaque opérateur est affecté à un poste\n",
+    "#contrainte 7 Chaque semaine, chaque opérateur est affecté à un poste\n",
     "\n",
     "for i in range(0,cardO):\n",
     "    for s in range(0,cardS):\n",
     "        prob += sum(z[i,s,p] for p in range(0,cardP)) == 1, f\"C6_{i,s}\"\n",
     "\n",
-    "#contrainte 7 (page 9) Chaque semaine, chaque poste est assuré par un opérateur\n",
+    "#contrainte 8 Chaque semaine, chaque poste est assuré par un opérateur\n",
     "\n",
     "for p in range(0,cardP):\n",
     "    for s in range(0,cardS):\n",
     "        prob += sum(z[i,s,p] for i in range(0,cardO)) == 1, f\"C7_{s,p}\"\n",
     "\n",
-    "#contrainte 8 (page 10) Chaque opérateur est affecté à une position dans le roulement\n",
+    "#contrainte 9 Chaque opérateur est affecté à une position dans le roulement\n",
     "\n",
     "for i in range(0,cardO):\n",
     "    prob += sum(y[i,r] for r in range(0,cardR)) == 1, f\"C8_{i,r}\"\n",
     "\n",
-    "#contrainte 9 (page 10) Chaque position dans le roulement est associée à un opérateur\n",
+    "#contrainte 10 Chaque position dans le roulement est associée à un opérateur\n",
     "\n",
     "for r in range(0,cardR):\n",
     "    prob += sum(y[i,r] for i in range(0,cardO)) == 1, f\"C9_{i,r}\"\n",
     "\n",
-    "#contrainte 10 (page 11) Un opérateur peut changer de poste si l'horaire de ce dernier est compatible\n",
+    "#contrainte 11 Un opérateur peut changer de poste si l'horaire de ce dernier est compatible\n",
     "\n",
     "for i in range(0,cardO):\n",
     "    for s in range(0,cardS):\n",
     "        for p in range(0,cardP):\n",
     "            prob += z[i,s,p] <= sum(sigma[p][p2]*y[i,rFunction(s,p2)] for p2 in range(0,cardP)), f\"C10_{i,s,p}\"\n",
     "\n",
-    "#contrainte 11 (page 11) Lorsqu'un jour un opérateur est affecté à un poste A alors qu'il est affecté à un poste B pour cette semaine, cela augmente son score d'insatisfaction\n",
+    "#contrainte 12 Lorsqu'un jour un opérateur est affecté à un poste A alors qu'il est affecté à un poste B pour cette semaine, cela augmente son score d'insatisfaction\n",
     "for i in range(0,cardO):\n",
     "    for s in range(0,cardS):\n",
     "        for p in range(0,cardP):\n",
@@ -522,20 +511,20 @@
     "            for p in range(0,cardP):\n",
     "                prob2 += x2[i,j,p] <= z[i,s,p].varValue + sum((1 - rho[p2])*z[i,s,p2].varValue for p2 in range(0,cardP)), f\"C3_{i,j,p}\"\n",
     "\n",
-    "#contrainte 4 (page 8) Chaque jour, un opérateur est affecté à au plus un poste #MODIF\n",
+    "#contrainte 4 Chaque jour, un opérateur est affecté à au plus un poste\n",
     "\n",
     "for i in range(0,cardO):\n",
     "    for j in range(0,cardJ):\n",
     "        if o[j] == 1 and delta[i][j] == 1:\n",
     "            prob2 += sum(x2[i,j,p] for p in range(0,cardP)) == 1, f\"C4_{i,j,p}\"\n",
     "\n",
-    "#contrainte 5 (page 8) Chaque jour, chaque poste est assuré par un opérateur #MODIF\n",
+    "#contrainte 5 Chaque jour, chaque poste est assuré par un opérateur\n",
     "for p in range(0,cardP):\n",
     "    for j in range(0,cardJ):\n",
     "        if o[j] == 1 and rho[p] == 1:\n",
     "            prob2 += sum(x2[i,j,p] for i in range(0,cardO)) == 1, f\"C5_{i,j,p}\"\n",
     "            \n",
-    "#contrainte 5.2 BONUS Chaque jour, un poste roulant est occupé par au plus une personne\n",
+    "#contrainte 6 Chaque jour, un poste roulant est occupé par au plus une personne\n",
     "for p in range(0,cardP):\n",
     "    for j in range(0,cardJ):\n",
     "        if o[j] == 1 and rho[p] == 0:\n",
