--- a/PuLP/ModeleExact.ipynb
+++ b/PuLP/ModeleExact.ipynb
@@ -342,7 +342,7 @@
     "        for p in range(0,cardP):\n",
     "            prob += z[i,s,p] <= sum(sigma[p][p2]*y[i,rFunction(s,p2)] for p2 in range(0,cardP)), f\"C10_{i,s,p}\"\n",
     "\n",
-    "#contrainte 12 Lorsqu'un jour un opérateur est affecté à un poste A alors qu'il est affecté à un poste B pour cette semaine, cela augmente son score d'insatisfaction\n",
+    "#contrainte 12 Lorsqu'une semaine, un opérateur est affecté à un poste A alors qu'il était affecté théoriquement à un poste B dont il possède la compétence, cela augmente son score d'insatisfaction\n",
     "for i in range(0,cardO):\n",
     "    for s in range(0,cardS):\n",
     "        for p in range(0,cardP):\n",
