--- a/PuLP/ModeleExact.ipynb
+++ b/PuLP/ModeleExact.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {
     "scrolled": false
    },
@@ -49,7 +49,7 @@
     "\n",
     "# le nombre de semaines <=> nombre de postes <=> nombre d'opérateurs\n",
     "#cardS = cardO\n",
-    "cardS = 1\n",
+    "cardS = 24\n",
     "cardJ = 7*cardS\n",
     "cardR = cardO\n",
     "\n",
@@ -111,7 +111,7 @@
     "# delta_ij (est-ce qu'une personne à 80% travaille le jour j)\n",
     "#delta = pd.read_csv('./data/delta_ij.csv',sep = \";\" )\n",
     "# d[i] représente le jour non travaillé de l'opérateur i la première semaine, d[i]=-1 si i est à temps plein\n",
-    "d = [3,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1]\n",
+    "d = [-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1]\n",
     "delta = np.full((cardO, cardJ), 1)\n",
     "for i in range(0,cardO):\n",
     "    if d[i] != -1:\n",
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {
     "scrolled": false
    },
@@ -194,12 +194,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "nb de variables x_ijp =  4032\n",
+      "nb de variables x_ijp =  96768\n",
       "nb de variables y_ir  =  576\n",
-      "nb de variables z_isp =  576\n",
-      "nb de variables u_ir  =  24\n",
+      "nb de variables z_isp =  13824\n",
+      "nb de variables u_ir  =  576\n",
       "\n",
-      "nb total de variables =  5208\n"
+      "nb total de variables =  111744\n"
      ]
     }
    ],
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,12 +267,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {
     "scrolled": false
    },
    "outputs": [],
    "source": [
+    "tempY = [[0,1,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],\n",
+    "[0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,1,0,0,0,0,0,0],\n",
+    "[0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,1,0,0,0,0],\n",
+    "[0,0,0,0,0,0,0,0,0,0,0,0,0,0,1,0,0,0,0,0,0,0,0,0],\n",
+    "[0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,1],\n",
+    "[0,0,0,0,0,0,1,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],\n",
+    "[0,0,0,0,0,0,0,0,1,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],\n",
+    "[0,0,0,0,0,0,0,0,0,0,0,0,0,1,0,0,0,0,0,0,0,0,0,0],\n",
+    "[1,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],\n",
+    "[0,0,0,0,0,0,0,0,0,1,0,0,0,0,0,0,0,0,0,0,0,0,0,0],\n",
+    "[0,0,0,0,0,1,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],\n",
+    "[0,0,0,0,1,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],\n",
+    "[0,0,0,0,0,0,0,0,0,0,1,0,0,0,0,0,0,0,0,0,0,0,0,0],\n",
+    "[0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,1,0,0,0,0,0,0,0,0],\n",
+    "[0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,1,0,0,0],\n",
+    "[0,0,0,0,0,0,0,1,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],\n",
+    "[0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,1,0,0],\n",
+    "[0,0,0,0,0,0,0,0,0,0,0,1,0,0,0,0,0,0,0,0,0,0,0,0],\n",
+    "[0,0,1,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],\n",
+    "[0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,1,0,0,0,0,0],\n",
+    "[0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,1,0],\n",
+    "[0,0,0,0,0,0,0,0,0,0,0,0,1,0,0,0,0,0,0,0,0,0,0,0],\n",
+    "[0,0,0,1,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],\n",
+    "[0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,1,0,0,0,0,0,0,0]]\n",
+    "\n",
+    "for i in range(cardO):\n",
+    "    for r in range(cardR):\n",
+    "        prob += y[i,r] == tempY[i][r]\n",
+    "\n",
     "#contrainte 1 Un opérateur ne peut prendre un poste que s'il est compétent et disponible sur un jour ouvré\n",
     "\n",
     "for i in range(0,cardO):\n",
@@ -358,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {
     "scrolled": false
    },
@@ -369,59 +398,34 @@
      "text": [
       "Version identifier: 22.1.0.0 | 2022-03-09 | 1a383f8ce\n",
       "CPXPARAM_Read_DataCheck                          1\n",
-      "Tried aggregator 1 time.\n",
-      "MIP Presolve eliminated 6159 rows and 1374 columns.\n",
-      "MIP Presolve modified 714 coefficients.\n",
-      "Reduced MIP has 3968 rows, 3834 columns, and 33117 nonzeros.\n",
-      "Reduced MIP has 3834 binaries, 0 generals, 0 SOSs, and 0 indicators.\n",
-      "Presolve time = 0.04 sec. (19.98 ticks)\n",
-      "Found incumbent of value 24.000000 after 0.09 sec. (49.34 ticks)\n",
-      "Probing changed sense of 144 constraints.\n",
-      "Probing time = 0.05 sec. (17.16 ticks)\n",
-      "Tried aggregator 1 time.\n",
-      "Detecting symmetries...\n",
-      "MIP Presolve eliminated 150 rows and 144 columns.\n",
-      "Reduced MIP has 3818 rows, 3690 columns, and 32685 nonzeros.\n",
-      "Reduced MIP has 3690 binaries, 0 generals, 0 SOSs, and 0 indicators.\n",
-      "Presolve time = 0.10 sec. (64.15 ticks)\n",
-      "Probing time = 0.02 sec. (5.11 ticks)\n",
-      "Clique table members: 16674.\n",
-      "MIP emphasis: balance optimality and feasibility.\n",
-      "MIP search method: dynamic search.\n",
-      "Parallel mode: deterministic, using up to 8 threads.\n",
-      "Root relaxation solution time = 0.20 sec. (186.04 ticks)\n",
-      "\n",
-      "        Nodes                                         Cuts/\n",
-      "   Node  Left     Objective  IInf  Best Integer    Best Bound    ItCnt     Gap\n",
-      "\n",
-      "*     0+    0                           24.0000        0.0000           100.00%\n",
-      "*     0+    0                           15.0000        0.0000           100.00%\n",
-      "*     0+    0                           14.0000        0.0000           100.00%\n",
-      "*     0+    0                            9.0000        0.0000           100.00%\n",
-      "*     0+    0                            7.0000        0.0000           100.00%\n",
-      "      0     0        0.0000  1311        7.0000        0.0000       12  100.00%\n",
-      "      0     0        0.0000   456        7.0000       Cuts: 3       45  100.00%\n",
-      "      0     0        0.0000   860        7.0000      Cuts: 73     2212  100.00%\n",
-      "*     0+    0                            0.0000        0.0000             0.00%\n",
-      "      0     0        cutoff              0.0000        0.0000     2212    0.00%\n",
-      "Elapsed time = 9.30 sec. (5818.96 ticks, tree = 0.01 MB, solutions = 6)\n",
-      "\n",
-      "Clique cuts applied:  10\n",
-      "Zero-half cuts applied:  7\n",
-      "Gomory fractional cuts applied:  2\n",
+      "Row 'C5_(6,_21)' infeasible, all entries at implied bounds.\n",
+      "Presolve time = 0.12 sec. (73.06 ticks)\n",
       "\n",
       "Root node processing (before b&c):\n",
-      "  Real time             =    9.31 sec. (5819.40 ticks)\n",
+      "  Real time             =    0.20 sec. (120.33 ticks)\n",
       "Parallel b&c, 8 threads:\n",
       "  Real time             =    0.00 sec. (0.00 ticks)\n",
       "  Sync time (average)   =    0.00 sec.\n",
       "  Wait time (average)   =    0.00 sec.\n",
       "                          ------------\n",
-      "Total (root+branch&cut) =    9.31 sec. (5819.40 ticks)\n",
-      "Cplex status= 101\n",
+      "Total (root+branch&cut) =    0.20 sec. (120.33 ticks)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "CPLEX Error  1217: No solution exists.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cplex status= 103\n",
       "\n",
-      "Temps de résolution : 9.590400457382202\n",
-      "Valeur objectif =  0.0\n"
+      "Temps de résolution : 5.663900375366211\n",
+      "Valeur objectif =  None\n"
      ]
     }
    ],
