--- a/PuLP/ModeleExactProfils.ipynb
+++ b/PuLP/ModeleExactProfils.ipynb
@@ -9,16 +9,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "scrolled": false
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "[0. 1. 2. 1. 1. 2. 3. 1. 2. 1. 4. 1. 1. 1. 1. 1. 2. 3. 1. 3. 2. 1. 1. 3.]\n",
+      "[ 1. 13.  5.  4.  1.]\n",
       "0           Auto 7h\n",
       "1        Dech 12h45\n",
       "2       Lav-cond-7h\n",
@@ -188,7 +187,7 @@
     "N = np.zeros(cardProfils)\n",
     "for i in range(cardO):\n",
     "    N[int(profils[i])] += 1\n",
-    "#print(N)\n",
+    "print(N)\n",
     "\n",
     "# delta_ij (est-ce qu'une personne à 80% travaille le jour j)\n",
     "#delta = pd.read_csv('./data/delta_ij.csv',sep = \";\" )\n",
